# KoikatuWebAPI

./: EmocreWebAPI.py  KoikatuWebAPI.py  Makefile  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml
kkwebapi/: EmocreWebAPI.py  KoikatuSunshineWebAPI.py  KoikatuWebAPI.py  __init__.py
