[tool.poetry]
name = "kkwebapi"
version = "0.1.0"
description = "Web API wrapper for Koikatu / EmotionCreators official uploader."
authors = ["great-majority <yosaku.ideal+github@gmail.com>"]
homepage = "https://github.com/great-majority/KoikatuWebAPI"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
